sendEmail async function check

--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EmpleAR</title>
+    <meta name="description" content="EmpleAR - Encuentra y publica ofertas de empleo en tu área. Conecta con empleadores y candidatos rápidamente." />
+    <meta name="keywords" content="empleo, trabajo, ofertas de empleo, buscar trabajo, empleadores, candidatos" />
+    <meta name="author" content="LucasOtaiza" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="EmpleAR" />
+    <meta property="og:description" content="Encuentra y publica ofertas de empleo en tu área. Conecta con empleadores y candidatos rápidamente." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.emple-ar.com" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="EmpleAR" />
+    <meta name="twitter:description" content="Encuentra y publica ofertas de empleo en tu área. Conecta con empleadores y candidatos rápidamente." />
+    <meta name="twitter:image" content="https://www.tu-dominio.com/imagen-twitter.png" />
+
+    <title>EmpleAR - Encuentra y Publica Ofertas de Empleo</title>
   </head>
   <body>
     <div id="root"></div>
